--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,13 +2,13 @@ name: Generate snake animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "0 */12 * * *" # Runs at the start of every 12th hour
 
-  workflow_dispatch:
+  workflow_dispatch: # Allow manual triggering of the workflow
 
-  push:
+  push: # Trigger on push to the master branch
     branches:
-    - master
+      - master
 
 jobs:
   generate:
@@ -18,17 +18,22 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate snake.svg
+      # Step 1: Check out the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Generate the snake.svg file
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: AmitavaDatta2004 # Your GitHub username
           outputs: dist/snake.svg?palette=github-dark
 
-
-      - name: push snake.svg to the output branch
+      # Step 3: Push the generated snake.svg to the output branch
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }} # Use your custom secret name here
